[gd_scene load_steps=27 format=3 uid="uid://dm7mingx0wlik"]

[ext_resource type="Script" path="res://ui/main_menu.gd" id="1_0au8i"]
[ext_resource type="Texture2D" uid="uid://dqlq7mn71767f" path="res://assets/title_sequence_sheet.png" id="1_hbgjf"]
[ext_resource type="PackedScene" uid="uid://e02jvyl6w3fx" path="res://scenes/combat_map.tscn" id="2_tailc"]
[ext_resource type="FontFile" uid="uid://ck0koyd3diw3n" path="res://assets/baftla_font_white.png" id="3_pjwut"]
[ext_resource type="Texture2D" uid="uid://n5h0qm22gbey" path="res://assets/button_normal.png" id="4_7pfn7"]
[ext_resource type="Texture2D" uid="uid://b8b6xsjt3n1tf" path="res://assets/button_pressed.png" id="5_03r4r"]
[ext_resource type="Texture2D" uid="uid://bwd6m2oqixkac" path="res://assets/main_menu_splash.png" id="6_wm6g8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_v8wrd"]
atlas = ExtResource("1_hbgjf")
region = Rect2(0, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8liy"]
atlas = ExtResource("1_hbgjf")
region = Rect2(480, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_joiu5"]
atlas = ExtResource("1_hbgjf")
region = Rect2(960, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_k6vxh"]
atlas = ExtResource("1_hbgjf")
region = Rect2(1440, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_cllro"]
atlas = ExtResource("1_hbgjf")
region = Rect2(1920, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_73so1"]
atlas = ExtResource("1_hbgjf")
region = Rect2(2400, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_suv1a"]
atlas = ExtResource("1_hbgjf")
region = Rect2(2880, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_igvm8"]
atlas = ExtResource("1_hbgjf")
region = Rect2(3360, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_inybi"]
atlas = ExtResource("1_hbgjf")
region = Rect2(3840, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_hoo8x"]
atlas = ExtResource("1_hbgjf")
region = Rect2(4320, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_jnthu"]
atlas = ExtResource("1_hbgjf")
region = Rect2(4800, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_3f3qk"]
atlas = ExtResource("1_hbgjf")
region = Rect2(5280, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_4inox"]
atlas = ExtResource("1_hbgjf")
region = Rect2(5760, 0, 480, 270)

[sub_resource type="SpriteFrames" id="SpriteFrames_mifkj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8wrd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8liy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_joiu5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6vxh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cllro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_73so1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_suv1a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igvm8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_inybi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hoo8x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jnthu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3f3qk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4inox")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_ac3m5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TitleSequence/Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TitleSequence/Label:scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TitleSequence/Label:scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BlackFade:color:r")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BlackFade:color:g")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("BlackFade:color:b")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("BlackFade:color:a")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_faqqr"]
resource_name = "flashing_text"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TitleSequence/Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_b4ms5"]
resource_name = "text_select"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TitleSequence/Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TitleSequence/Label:scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TitleSequence/Label:scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1.2, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}

[sub_resource type="Animation" id="Animation_ngt2d"]
resource_name = "fade_to_black"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BlackFade:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BlackFade:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BlackFade:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BlackFade:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cgk67"]
_data = {
"RESET": SubResource("Animation_ac3m5"),
"fade_to_black": SubResource("Animation_ngt2d"),
"flashing_text": SubResource("Animation_faqqr"),
"text_select": SubResource("Animation_b4ms5")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_0au8i")
combat_scene = ExtResource("2_tailc")

[node name="TitleSequence" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(576, 324)
scale = Vector2(2.4, 2.4)
sprite_frames = SubResource("SpriteFrames_mifkj")
autoplay = "default"
frame = 12
frame_progress = 1.0

[node name="Label" type="Label" parent="TitleSequence"]
visible = false
offset_left = -240.0
offset_top = 113.417
offset_right = 240.0
offset_bottom = 131.417
pivot_offset = Vector2(240, 9.11565)
theme_override_fonts/font = ExtResource("3_pjwut")
theme_override_font_sizes/font_size = 18
text = "Press Any Key To Start"
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="TitleSequence"]
z_index = -1
offset_left = -240.0
offset_top = -135.0
offset_right = 240.0
offset_bottom = 135.0
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cgk67")
}

[node name="MarginContainer" type="MarginContainer" parent="."]
z_index = -5
layout_mode = 2
offset_right = 1152.0
offset_bottom = 648.0
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 200
theme_override_constants/margin_right = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="PlayButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
texture_normal = ExtResource("4_7pfn7")
texture_pressed = ExtResource("5_03r4r")
stretch_mode = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PlayButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.0
offset_top = -38.5
offset_right = 130.0
offset_bottom = 26.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_pjwut")
theme_override_font_sizes/font_size = 65
text = "play"

[node name="QuitButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
texture_normal = ExtResource("4_7pfn7")
texture_pressed = ExtResource("5_03r4r")
stretch_mode = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/QuitButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.0
offset_top = -38.5
offset_right = 130.0
offset_bottom = 26.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_pjwut")
theme_override_font_sizes/font_size = 65
text = "quit game"

[node name="MenuBG" type="Sprite2D" parent="MarginContainer"]
z_index = -1
position = Vector2(576, 324)
scale = Vector2(2.4, 2.4)
texture = ExtResource("6_wm6g8")

[node name="BlackFade" type="ColorRect" parent="."]
z_index = 100
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
mouse_filter = 2
color = Color(0, 0, 0, 0)

[connection signal="animation_finished" from="TitleSequence" to="." method="_on_title_sequence_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
